--- a/src/assets/styles/filters.css
+++ b/src/assets/styles/filters.css
@@ -15,7 +15,7 @@ ul {
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: large;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -34,8 +34,8 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   background-color: #eee;
   display: flex;
   align-items: center;
