--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Abel&family=DM+Sans:wght@400;700&family=Montserrat:wght@500&family=Rajdhani:wght@300;400&family=Roboto&family=Rubik&display=swap");
 
-body,
-html {
+body {
+  display: flex;
+  justify-content: center;
   margin: 0px;
   padding: 0px;
   font-family: "JetBrains Mono", monospace;
@@ -16,13 +17,12 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 90%;
   height: 100%;
-  gap: 1em;
 }
 
 .data-container {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 10px;
 }
