--- a/src/assets/styles/filters.css
+++ b/src/assets/styles/filters.css
@@ -69,3 +69,14 @@ ul {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+@media screen and (min-width: 1440px) {
+  .checkbox-label {
+    font-size: 25px;
+  }
+
+  .checkmark {
+    height: 25px;
+    width: 25px;
+  }
+} ;
